content/docs/2.0.9/2-implementing-core-features/5-context-menu.mdx
---
posttype: "docs"
title: Context menu
metaTitle: "Context menu"
metaDescription: "metaDescription"
---

## Context menu

ReactGrid comes with a custom context menu feature. Custom menu entries can be easily created,
allowing for personalized experiences.
By default, the context menu is disabled. You can enable it by providing a handler function
to your ReactGrid using the `onContextMenu` property.

## Enabling simple context menu

This guide is based on [handling data changes](link).

1. Update imports by adding [`Id`](link), [`SelectionMode`](link) and [`MenuOption`](link) interfaces

```tsx
import { ReactGrid, Id, SelectionMode, MenuOption } from "@silevis/reactgrid"
```

2. Implement the context menu handler function

The `menuOptions` argument of `simpleHandleContextMenu` contains a list of default menu entries
provided by DataGrid - copy, cut and paste.
For now, we'll simply return that, enabling the default ReactGrid context menu.

```tsx
const simpleHandleContextMenu = (
  selectedRowIds: Id[],
  selectedColIds: Id[],
  selectionMode: SelectionMode,
  menuOptions: MenuOption[]
): MenuOption[] => {
  return menuOptions
}
// ...
return <ReactGrid
  rows={state.rows}
  columns={state.columns}
  license={"non-commercial"}
  onCellsChanged={handleChanges}
  onContextMenu={simpleHandleContextMenu} // highlight-line
/>
// ...
```

Here's the result. Right click anywhere in the grid to see the context menu.

<iframe
  src="https://codesandbox.io/embed/reactgrid-getting-started-kfwpe?fontsize=14&hidenavigation=1&theme=dark"
  style="width:100%; height:250px; border:0; border-radius: 4px; overflow:hidden;"
  title="reactgrid-simple-context-menu-handling"
  allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
  sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
></iframe>

## Advanced usage - removing columns and rows

The default menu, while pretty, may seem a bit lackluster when it comes to the functionality it provides.
Let's try and extend it a bit - we'll make it possible to remove columns and rows using the context menu.

1. Add some more imports

```tsx
import {
  ReactGrid,
  Id,
  SelectionMode,
  MenuOption,
  Column, // highlight-line
  Row, // highlight-line
  Cell, // highlight-line
} from "@silevis/reactgrid"
```

2. Implement a more advanced context menu handler function

```tsx
const handleContextMenu = (
  selectedRowIds: Id[],
  selectedColIds: Id[],
  selectionMode: SelectionMode,
  menuOptions: MenuOption[]
): MenuOption[] => {
  if (selectionMode === "row") {
    menuOptions = [
      ...menuOptions,
      {
        id: "removeRow",
        label: "Remove row",
        handler: () => {
          setState({
            ...state,
            rows: state.rows.filter(
              (row: Row) => !selectedRowIds.includes(row.rowId)
            ),
          })
        },
      },
    ]
  }
  if (selectionMode === "column") {
    menuOptions = [
      ...menuOptions,
      {
        id: "removeColumn",
        label: "Remove column",
        handler: () => {
          const columns: Column[] = state.columns.filter(
            (column: Column) => !selectedColIds.includes(column.columnId)
          )
          const columnsIdxs = state.columns
            .map((column: Column, idx: number) => {
              if (!columns.includes(column)) return idx
              return undefined
            })
            .filter(idx => idx !== undefined)
          const rows = state.rows.map((row: Row) => ({
            ...row,
            cells: row.cells.filter(
              (_: Cell, idx: number) => !columnsIdxs.includes(idx)
            ),
          }))
          setState({ ...state, columns, rows })
        },
      },
    ]
  }
  return menuOptions
}
```

3. Update the `ReactGrid` component's props. Note that columns and rows must be selectable for our feature to work.
After all, we will be removing the *currently selected* row or column.

```tsx
return (
  <ReactGrid
    rows={state.rows}
    columns={state.columns}
    license={"non-commercial"}
    onCellsChanged={handleChanges} // highlight-line
    onContextMenu={handleContextMenu} // highlight-line
    enableColumnSelection // highlight-line
    enableRowSelection // highlight-line
  />
)
```

4. The results

You can see the effect of the changes we've just introduced in the demo below.
To test the new feature, simply select a column or a row by clicking a header cell or one of the leftmost cells,
then right-click anywhere and use the new menu entry.

<iframe
  src="https://codesandbox.io/embed/reactgrid-simple-context-menu-handling-2ic2h?fontsize=14&hidenavigation=1&theme=dark"
  style="width:100%; height:250px; border:0; border-radius: 4px; overflow:hidden;"
  title="reactgrid-advanced-context-menu-handling"
  allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
  sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
></iframe>