content/docs/3.0/2-implementing-core-features/5-context-menu.mdx
---
posttype: "docs"
title: Context menu
metaTitle: "Context menu"
metaDescription: "metaDescription"
proMark: true
---
import { ReactGrid } from "@silevis/reactgrid";
const simpleCode = `const SimpleContextMenuHandlingSample = () => {
    const [state, setState] = React.useState(() => ({
        columns: [
            { columnId: "Name", width: 100 },
            { columnId: "Surname", width: 100 }
        ] as Column[],
        rows: [
            {
                rowId: 0,
                cells: [
                    { type: "header", text: "Name" },
                    { type: "header", text: "Surname" }
                ]
            },
            {
                rowId: 1,
                cells: [
                    { type: "text", text: "Thomas" },
                    { type: "text", text: "Goldman" }
                ]
            },
            {
                rowId: 2,
                cells: [
                    { type: "text", text: "Susie" },
                    { type: "text", text: "Spencer" }
                ]
            },
            {
                rowId: 3,
                cells: [{ type: "text", text: "" }, { type: "text", text: "" }]
            }
        ] as Row[]
    }));
    const handleChanges = (changes: CellChange[]) => {
        const newState = { ...state };
        changes.forEach(change => {
            const changeRowIdx = newState.rows.findIndex(el => el.rowId === change.rowId);
            const changeColumnIdx = newState.columns.findIndex(el => el.columnId === change.columnId);
            newState.rows[changeRowIdx].cells[changeColumnIdx] = change.newCell;
        });
        setState(newState);
    };
    const simpleHandleContextMenu = (
        selectedRowIds: Id[],
        selectedColIds: Id[],
        selectionMode: SelectionMode,
        menuOptions: MenuOption[]
    ): MenuOption[] => {
        return menuOptions;
    };
    return (
        <ReactGrid
            rows={state.rows}
            columns={state.columns}
            onCellsChanged={handleChanges}
            onContextMenu={simpleHandleContextMenu}
        />
    );
}
render(<SimpleContextMenuHandlingSample/>)
`;
const advancedCode = `const AdvancedContextMenuHandlingSample = () => {
    const [state, setState] = React.useState(() => ({
        columns: [
            { columnId: "Name", width: 100 },
            { columnId: "Surname", width: 100 }
        ] as Column[],
        rows: [
            {
                rowId: 0,
                cells: [
                    { type: "header", text: "Name" },
                    { type: "header", text: "Surname" }
                ]
            },
            {
                rowId: 1,
                cells: [
                    { type: "text", text: "Thomas" },
                    { type: "text", text: "Goldman" }
                ]
            },
            {
                rowId: 2,
                cells: [
                    { type: "text", text: "Susie" },
                    { type: "text", text: "Spencer" }
                ]
            },
            {
                rowId: 3,
                cells: [{ type: "text", text: "" }, { type: "text", text: "" }]
            }
        ] as Row[]
    }));
    const handleChanges = (changes: CellChange[]) => {
        const newState = { ...state };
        changes.forEach(change => {
            const changeRowIdx = newState.rows.findIndex(el => el.rowId === change.rowId);
            const changeColumnIdx = newState.columns.findIndex(el => el.columnId === change.columnId);
            newState.rows[changeRowIdx].cells[changeColumnIdx] = change.newCell;
        });
        setState(newState);
    };
    const handleContextMenu = (
        selectedRowIds: Id[],
        selectedColIds: Id[],
        selectionMode: SelectionMode,
        menuOptions: MenuOption[]
    ): MenuOption[] => {
        if (selectionMode === "row") {
            menuOptions = [
                ...menuOptions,
                {
                    id: "removeRow",
                    label: "Remove row",
                    handler: () => {
                        setState({
                            ...state,
                            rows: state.rows.filter(
                                (row: Row) => !selectedRowIds.includes(row.rowId)
                            )
                        });
                    }
                }
            ];
        }
        if (selectionMode === "column") {
            menuOptions = [
                ...menuOptions,
                {
                    id: "removeColumn",
                    label: "Remove column",
                    handler: () => {
                        const columns: Column[] = state.columns.filter(
                            (column: Column) => !selectedColIds.includes(column.columnId)
                        );
                        const columnsIdxs = state.columns
                            .map((column: Column, idx: number) => {
                                if (!columns.includes(column)) return idx;
                                return undefined;
                            })
                            .filter(idx => idx !== undefined);
                        const rows = state.rows.map((row: Row) => ({
                            ...row,
                            cells: row.cells.filter(
                                (_: Cell, idx: number) => !columnsIdxs.includes(idx)
                            )
                        }));
                        setState({ ...state, ...columns, ...rows });
                    }
                }
            ];
        }
        return menuOptions;
    };
    return (
        <ReactGrid
            rows={state.rows}
            columns={state.columns}
            onCellsChanged={handleChanges}
            onContextMenu={handleContextMenu}
            enableColumnSelection
            enableRowSelection
        />
    );
}
render(<AdvancedContextMenuHandlingSample/>)
`;


## Context menu

ReactGrid comes with a custom context menu feature. Custom menu entries can be easily created,
allowing for personalized experiences.
By default, the context menu is disabled. You can enable it by providing a handler function
to your ReactGrid using the `onContextMenu` property.

<Alert color="warning">
	<i className="tim-icons icon-alert-circle-exc pr-2"></i>
	Context menu is only available in Pro version
</Alert>

## Enabling simple context menu

This guide is based on [handling data changes](/docs/3.0/2-implementing-core-features/1-handling-changes/).

1. Update imports by adding [`Id`](/docs/3.0/7-api/1-types/4-id/), [`SelectionMode`](/docs/3.0/7-api/1-types/7-selection-mode/) 
and [`MenuOption`](/docs/3.0/7-api/0-interfaces/8-menuoption/) interfaces

```ts
import { ReactGrid, Id, SelectionMode, MenuOption } from "@silevis/reactgrid"
```

2. Implement the context menu handler function

The `menuOptions` argument of `simpleHandleContextMenu` contains a list of default menu entries
provided by ReactGrid - copy, cut and paste.
For now, we'll simply return that, enabling the default ReactGrid context menu.

```tsx
const simpleHandleContextMenu = (
  selectedRowIds: Id[],
  selectedColIds: Id[],
  selectionMode: SelectionMode,
  menuOptions: MenuOption[]
): MenuOption[] => {
  return menuOptions
}
// ...
return <ReactGrid
  rows={state.rows}
  columns={state.columns}
  onCellsChanged={handleChanges}
  onContextMenu={simpleHandleContextMenu} // highlight-line
/>
// ...
```

Here's the result. Right click anywhere in the grid to see the context menu.

<LiveCode 
  code={simpleCode}
  title='Basic menu context handling live demo'
  noInline={true}
/> 

## Advanced example - removing columns and rows

The default menu, while pretty, may seem a bit lackluster when it comes to the functionality it provides.
Let's try and extend it a bit - we'll make it possible to remove columns and rows using the context menu.

1. Add some more imports to previous example

```ts
import { ReactGrid, Id,SelectionMode, MenuOption,
  Column, // highlight-line
  Row, // highlight-line
  Cell, // highlight-line
} from "@silevis/reactgrid"
```

2. Implement a more advanced context menu handler function

```ts
const handleContextMenu = (
    selectedRowIds: Id[],
    selectedColIds: Id[],
    selectionMode: SelectionMode,
    menuOptions: MenuOption[]
): MenuOption[] => {
    if (selectionMode === "row") {
        menuOptions = [
            ...menuOptions,
            {
                id: "removeRow",
                label: "Remove row",
                handler: () => {
                    setState({
                        ...state,
                        rows: state.rows.filter(row => !selectedRowIds.includes(row.rowId))
                    });
                }
            }
        ];
    }
    if (selectionMode === "column") {
        menuOptions = [
            ...menuOptions,
            {
                id: "removeColumn",
                label: "Remove column",
                handler: () => {
                    const columns = state.columns.filter(column => !selectedColIds.includes(column.columnId));
                    const columnsIdxs = state.columns
                        .map((column, idx) => {
                            if (!columns.includes(column)) return idx;
                            return undefined;
                        })
                        .filter(idx => idx !== undefined);
                    const rows = state.rows.map(row => ({
                        ...row,
                        cells: row.cells.filter((_, idx) => !columnsIdxs.includes(idx))
                    }));
                    setState({ ...state, ...columns, ...rows });
                }
            }
        ];
    }
    return menuOptions;
};
```

3. Update the `ReactGrid` component's props. Note that columns and rows must be selectable for our feature to work.
After all, we will be removing the *currently selected* row or column.

```tsx
return (
  <ReactGrid
    rows={state.rows}
    columns={state.columns}
    onCellsChanged={handleChanges} // highlight-line
    onContextMenu={handleContextMenu} // highlight-line
    enableColumnSelection // highlight-line
    enableRowSelection // highlight-line
  />
)
```

## Live demo

You can see the effect of the changes we've just introduced in the demo below.
To test the new feature, simply select a column or a row by clicking a header cell or one of the leftmost cells,
then right-click anywhere and use the new menu entry.

<LiveCode 
  code={advancedCode}
  title='Advanced menu context handling live demo'
  noInline={true}
/> 